# GeoGraphGen

./: .gitignore  LICENSE  README.md  pyproject.toml
database-docker/: .gitignore  docker-compose.yml
example_workflow/: 0_OSM_preprocessing_prune.py  1_OSM_preprocessing_helper_collections.py  2_intersections_to_mongo_db.py  3_processed_intersections_to_mongo_db.py  4_connections_to_mongo_db.py  5_merge.py  6_split_intersections.py  7_property_graph_generation.py  8_example_path.py  Reset.py
geo_classes/: ConnectionMerger.py  ConnectionMongoParser.py  DuplicatePathRemover.py  IntersectionMongoParser.py  IntersectionSplitter.py  ProcessedIntersectionMongoParser.py
geo_classes/Exporters/: GraphExporterNeo4J.py
graph/: IntersectionPathway.py  Pathway.py
graph/PathwayHelpers/: HillAscent.py
setup/: Constants.py  GeoConnector.py  MapBoundaries.py
